--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -1,7 +1,5 @@
 html,
 body {
-  width: 100%;
-  height: 100%;
   overflow-x: hidden;
 }
 
@@ -10,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
